# clox

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt
config/: config.h.in
docs/: README.md  TODO.md  build.md
include/clox/compiler/: compiler.h  scanner.h
include/clox/core/: chunk.h  io.h  memory.h  value.h
include/clox/utils/: debug.h  dynarr.h  error.h
include/clox/vm/: dispatch.h  vm.h
src/: main.c
src/compile/: compiler.c  scanner.c
src/compiler/: compiler.c  scanner.c
src/core/: chunk.c  io.c  memory.c  value.c
src/utils/: debug.c  dynarr.c  error.c
src/vm/: vm.c
tools/: setup_docs.py
